Added more environment-settings...

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,13 @@
 </header>
 
 <div class="container">
-    <main role="main" class="pb-3" style="max-width:960px">    
+    <main role="main" class="pb-3" style="max-width:960px;">    
         <router-outlet></router-outlet>
     </main>
 </div>
+
+<footer class="border-top text-muted">
+    <div class="text-center mt-3 mb-3">
+      &copy; 2020 - Janno Tjarks - <a routerLink="imprint">Impressum</a> - <a routerLink="privacy">Datenschutzerkl&auml;rung</a>
+    </div>
+</footer>
