--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,5 @@
 <h1>Lebenslauf</h1>
-<p><a href="resources/Lebenslauf_JannoTjarks.pdf">Herunterladen als PDF</a></p>
+<p><a href={{environmentVariables.curriculumVitae}}>Herunterladen als PDF</a></p>
 <hr class="m-3" />
 <!-- Beruflicher Werdegang-->
 <section id="beruflicher-werdegang">
