--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse" [ngbCollapse]="navbarOpen">
                 <ul class="navbar-nav flex-grow-1" routerLinkActive="active">
                     <li class="nav-item">
-                        <a class="nav-link black" routerLink="home" routerLinkActive="active">Über mich</a>
+                        <a class="nav-link text-black" routerLink="home" routerLinkActive="active">Über mich</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" routerLink="resume" routerLinkActive="active">Lebenslauf</a>
@@ -26,13 +26,13 @@
 </header>
 
 <div class="container">
-    <main role="main" class="pb-3" style="max-width:960px;">    
+    <main role="main" style="max-width:960px;">    
         <router-outlet></router-outlet>
     </main>
 </div>
 
 <footer class="border-top text-muted">
     <div class="text-center mt-3 mb-3">
-      &copy; 2020 - Janno Tjarks - <a routerLink="imprint">Impressum</a> - <a routerLink="privacy">Datenschutzerkl&auml;rung</a>
+      &copy; 2021 - Janno Tjarks - <a routerLink="imprint">Impressum</a> - <a routerLink="privacy">Datenschutzerkl&auml;rung</a>
     </div>
 </footer>
